# observability

./: .gitignore  ARCHITECTURE.md  AUTO_ROADMAP.md  INTEGRATION.md  README.md  SDK.md  SELF_IMPROVE.md  WORKLOG.md  pyproject.toml
.claude/: settings.autonomous.json  settings.json  settings.local.json
REVIEWS/: BV-OBS-1.md  BV-OBS-10.md  BV-OBS-11.md  BV-OBS-12.md  BV-OBS-2.md  BV-OBS-3.md  BV-OBS-4.md  BV-OBS-5.md  BV-OBS-6.md  BV-OBS-7.md  BV-OBS-8.md  BV-OBS-9.md  README.md
docs/: DEVELOPER_GUIDE.md  GETTING_STARTED.md
docs/examples/: README.md  golden.json
docs/examples/prompts/support_bot/reply/: v1.prompt
docs/examples/prompts/support_bot/triage/: v1.prompt  v2.prompt
prism/: __init__.py  audit.py  cli.py  client.py  config.py  context.py  cost.py  models.py  safety.py  tracing.py  transport.py  version.py
prism/collector/: app.py
prism/dashboard/: app.py  auth.py  identity.py  queries.py
prism/evals/: __init__.py  judge.py  reference.py  runner.py  scorers.py
prism/integrations/: __init__.py  langchain.py
prism/prompts/: __init__.py  repo.py
prism/store/: __init__.py  dao.py  db.py  projects.py  schema.sql  writer.py
scripts/: git_sync.sh
scripts/demo/: README.md  fake_gw.py  seed.py
tests/: smoke_audit.py  smoke_auth.py  smoke_dashboard.py  smoke_eval_loop.py  smoke_evals.py  smoke_idempotent.py  smoke_identity.py  smoke_judge.py  smoke_multitenant.py  smoke_prompts.py  smoke_reference.py  smoke_spine.py  smoke_up.py
