[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-observability"
version = "0.1.0"
description = "Pip-only, zero-infra LLM observability for the /api/llm/process gateway."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
# The collector + dashboard run as their own processes; products only need the SDK
# (core dep: httpx). Install the extra that matches your role.
collector = ["fastapi>=0.110", "uvicorn>=0.29"]
dashboard = ["dash>=2.16", "plotly>=5.20", "pandas>=2.2"]
cli = ["typer>=0.12"]
langchain = ["langchain-core>=0.2"]
evals = ["rouge-score>=0.1.2"]              # reference-based ROUGE-L (light, pure-python)
drift = ["bert-score>=0.3"]                 # OPTIONAL semantic drift — pulls torch (~700MB)
all = [
    "fastapi>=0.110", "uvicorn>=0.29",
    "dash>=2.16", "plotly>=5.20", "pandas>=2.2",
    "typer>=0.12", "langchain-core>=0.2",
]

[project.scripts]
prism = "prism.cli:main"

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.setuptools.package-data]
"prism.store" = ["*.sql"]
